@@ -693,14 +693,17 @@ public class JabRef {
         Globals.prefs.updateExternalFileTypes();
 
         // This property is set to make the Mac OSX Java VM move the menu bar to
-        // the top
-        // of the screen, where Mac users expect it to be.
+        // the top of the screen, where Mac users expect it to be.
         System.setProperty("apple.laf.useScreenMenuBar", "true");
 
         // Set antialiasing on everywhere. This only works in JRE >= 1.5.
         // Or... it doesn't work, period.
-        //System.setProperty("swing.aatext", "true");
         // TODO test and maybe remove this! I found this commented out with no additional info ( payload@lavabit.com )
+        // Enabled since JabRef 2.11 beta 4
+        System.setProperty("swing.aatext", "true");
+        // Default is "on".
+        // "lcd" instead of "on" because of http://wiki.netbeans.org/FaqFontRendering and http://docs.oracle.com/javase/6/docs/technotes/guides/2d/flags.html#aaFonts 
+        System.setProperty("awt.useSystemAAFontSettings", "lcd");
 
         // Set the Look & Feel for Swing.
         try {
